更新jvm相关